fix: implemented playCard() to handle when trumpSuit is null for miserie and documentation